--- a/public/openapi/components/schemas/TopicObject.yaml
+++ b/public/openapi/components/schemas/TopicObject.yaml
@@ -213,6 +213,9 @@ TopicObjectSlim:
           type: number
         viewcount:
           type: number
+        anonymous:
+          type: boolean
+          description: Whether or not the user who created this topic is anonymous
         postercount:
           type: number
         scheduled:
